# nonebot-plugin-rimofun

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
nonebot_plugin_rimofun/: __init__.py  __main__.py  config.py  data_source.py
nonebot_plugin_template/: __init__.py
