[project]
name = "nonebot-plugin-rimofun"
dynamic = ["version"]
description = "Use RimoChan's stuff to do some interesting things"
authors = [{ name = "LgCookie", email = "lgc2333@126.com" }]
dependencies = [
    "nonebot2>=2.3.1",
    "nonebot-plugin-alconna>=0.48.0",
    "pypinyin>=0.51.0",
    "yinglish>=1.0.1",
    "unvcode>=1.0.0",
]
requires-python = ">=3.9,<4.0"
readme = "README.md"
license = { text = "MIT" }

[project.urls]
homepage = "https://github.com/lgc-NB2Dev/nonebot-plugin-rimofun"

[tool.pdm.version]
source = "file"
path = "nonebot_plugin_rimofun/__init__.py"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
